# ovhctl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cfg.rs  logging.rs  main.rs
src/cmd/: cloud.rs  domain.rs  fmt.rs  mod.rs
src/cmd/dedicated/: mod.rs
src/cmd/dedicated/server/: mod.rs
src/cmd/loadbalancer/: mod.rs
src/lib/: mod.rs  net.rs  types.rs
src/ovh/: auth.rs  domain.rs  mod.rs
src/ovh/cloud/: mod.rs
src/ovh/cloud/loadbalancer/: mod.rs
src/ovh/dedicated/: mod.rs
src/ovh/dedicated/server/: mod.rs
src/util/: mod.rs
