[package]
name = "ovhctl"
description = "A command line interface to interact with the ovhcloud api"
version = "0.1.7"
authors = ["Florentin Dubois <florentin.dubois@hey.com>"]
edition = "2021"
rust-version = "1.60.0"
repository = "https://github.com/FlorentinDUBOIS/ovhctl"
license = "MIT"
keywords = ["OVHcloud", "rust", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.53"
bytes = "^1.1.0"
config = "^0.13.1"
chrono = "^0.4.19"
futures = "^0.3.21"
hyper = { version = "^0.14.18", features = ["full"] }
hyper-tls = "^0.5.0"
ipnetwork = "^0.19.0"
paw = "^1.0.0"
pbr = "^1.0.4"
prettytable-rs = "^0.8.0"
rust-crypto = "^0.2.36"
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
serde_yaml = "^0.8.23"
slog = { version = "^2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "^2.7.0"
slog-term = "^2.9.0"
slog-scope = "^4.4.0"
structopt = { version = "^0.3.26", features = ["paw"] }
tokio = { version = "^1.17.0", features = ["full"] }
