[package]
name = "ovhctl"
description = "A command line interface to interact with the ovhcloud api"
version = "0.1.7"
authors = ["Florentin Dubois <florentin.dubois@hey.com>"]
edition = "2021"
rust-version = "1.60.0"
repository = "https://github.com/FlorentinDUBOIS/ovhctl"
license = "MIT"
keywords = ["OVHcloud", "rust", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.53"
bytes = "^1.1.0"
clap = { version = "^3.1.18", features = ["derive"] }
config = "^0.13.1"
chrono = "^0.4.19"
futures = "^0.3.21"
hyper = { version = "^0.14.19", features = ["full"] }
hyper-tls = "^0.5.0"
ipnetwork = "^0.19.0"
paw = "^1.0.0"
pbr = "^1.0.4"
prettytable-rs = "^0.8.0"
rust-crypto = "^0.2.36"
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.81"
serde_yaml = "^0.8.24"
thiserror = "^1.0.31"
tokio = { version = "^1.18.2", features = ["full"] }
tracing = "^0.1.34"
tracing-subscriber = { version = "^0.3.11", default-features = false, features = ["std", "ansi", "tracing-log"] }
