[package]
name = "ovhctl"
description = "A command line interface to interact with the ovhcloud api"
version = "0.1.8"
authors = ["Florentin Dubois <florentin.dubois@hey.com>"]
edition = "2021"
rust-version = "1.64.0"
repository = "https://github.com/FlorentinDUBOIS/ovhctl"
license = "MIT"
keywords = ["OVHcloud", "rust", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.66"
bytes = "^1.4.0"
clap = { version = "^4.1.8", features = ["derive"] }
config = "^0.13.3"
chrono = "^0.4.23"
futures = "^0.3.26"
hyper = { version = "^0.14.24", features = ["full"] }
hyper-tls = "^0.5.0"
ipnetwork = "^0.20.0"
paw = "^1.0.0"
pbr = "^1.1.1"
prettytable-rs = "^0.10.0"
rust-crypto = "^0.2.36"
serde = { version = "^1.0.154", features = ["derive"] }
serde_json = "^1.0.94"
serde_yaml = "^0.9.19"
thiserror = "^1.0.39"
tokio = { version = "^1.26.0", features = ["rt", "macros"] }
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.16", default-features = false, features = ["std", "ansi", "tracing-log"] }
